--- a/views/posts/index.ejs
+++ b/views/posts/index.ejs
@@ -9,12 +9,23 @@
     </header>
     <div class="posts">
     <% include partials/top %>
+<!-- main start-->
 
-  <!-- main start -->
+<!-- views/posts/index.ejs -->
+<div class="index">
+  <a href="/posts/new"><button>New</button></a>
+  <ul>
+    <% data.forEach(function(e){ %>
+      <li>
+        <a href="/posts/<%= e._id %>"><%= e.title %></a>
+        <span><%= e.createdAt.toLocaleDateString() %></span>
+      </li>
+    <% }) %>
+  </ul>
+</div>
 
-  <!-- main end -->
-
-    </div>
+<!-- main end -->
+    </div><!--posts end -->
     <footer>
       <% include ../partials/footer %>
     </footer>
